Fix text-overflow, clean up structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,25 @@
 body{
   margin:0;
   padding:0;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   --font-color: #926239;
   color:var(--font-color);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   line-height: 1.6;
   }
 *{
 margin:inherit;
 }
-
 .text-overflow{
   white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
-  text-transform: capitalize;
 }
 .welcome-section{
+height: 100vh;
 background-image: url(./../images/beachshowcase.jpg);
 background-size: cover;
 background-position: bottom right;
-height: 100vh;
+
 text-align: center;
 font-size: 20px;
 }
@@ -31,20 +31,20 @@ section>p{
   padding-top: 40vh;
   max-width: 100vw;
   font-size: 2.5em;
-  overflow: hidden;
-  
-}
-.button, .text-overflow{
+  text-transform: capitalize;
+   }
+.button{
   padding: 10px 20px;
   border: 1px solid var(--font-color);
   border-radius: 10px;
+  color: var(--font-color);
   font-size: 0.9em;
   text-transform: capitalize;
   text-decoration-line: none;
-  color: var(--font-color);
-}
+  }
 /* начинается статья с контентом */
 .container{
+  height: 400px;
   font-size: 17px;
   }
 .container>p{
@@ -62,9 +62,10 @@ article>p,.reversed-bg{
   text-align: center;
 }
 .bottom{
+  width: 33.33%;
+  height: 30%;
   display: inline-table;
   box-sizing: border-box;
-  width: 33.33%;
   vertical-align: top;
   text-align: left;
 }
